service-a.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-a-service
spec:
  selector:
    app: hello-1
  type: NodePort
  ports:
  - name: http
    port: 8080
    protocol: TCP
