service-b.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-b-service
spec:
  selector:
    app: hello-2
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    name: http
